Display card printings on search
Added a #printings-container div to index.html and updated search.js to fetch and display card printings with images when a card is searched. Updated styles in style.css for the printings container. Removed placeholder card generation logic.

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <div class="title">powernine.dev</div>
         <center><input class="search-bar" id="search-bar" type="text" placeholder="Search..." aria-label="Search"></center>
     </div>
+    <div id="printings-container"></div>
     <script src="/search.js"></script>
 </body>
 </html>
