Added card info and API access

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container" id="search-div">
         <div class="title">powernine.dev</div>
+        <p style="text-align: center; margin-top: -2rem; margin-bottom: 1rem; font-size: 1rem; color: gray;">the <strong>free</strong> comprehensive mtg card search</p>
         <center><input class="search-bar" id="search-bar" type="text" placeholder="Search..." aria-label="Search"></center>
     </div>
     <div id="printings-container"></div>
