--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/awesomplete@1.1.5/awesomplete.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>powernine.dev</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/awesomplete@1.1.5/awesomplete.css" />
-    <script src="https://cdn.jsdelivr.net/npm/awesomplete@1.1.5/awesomplete.min.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/awesomplete@1.1.5/awesomplete.min.js" defer></script>
     <style>
     </style>
 </head>
 <body>
     <div class="container" id="search-div">
         <div class="title">powernine.dev</div>
-        <p style="text-align: center; margin-top: -2rem; margin-bottom: 1rem; font-size: 1rem; color: gray;">the <strong>free</strong> comprehensive mtg card search</p>
+        <p style="text-align: center; margin-top: -2rem; margin-bottom: 1rem; font-size: 1rem; color: gray;">the <strong>free</strong> mtg trading & market analysis tool</p>
         <center><input class="search-bar" id="search-bar" type="text" placeholder="Search..." aria-label="Search"></center>
     </div>
     <div id="printings-container"></div>
