Add permanent list saving, Discord logging, and UI improvements
Implements permanent saving of imported lists with a warning banner and save button in the UI. Adds Discord webhook logging for key events. Refactors API routing to accept a database instance and updates endpoints for new list features. Introduces a script for cleaning up saved lists, updates binder and list views for improved UX, and adds new media assets for the homepage. Also includes various style and accessibility improvements across the frontend.

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
     <div class="container" id="search-div">
-        <button class="tab-button left-tab" id="import-csv-btn">Import CSV</button>
-        <button class="tab-button right-tab">Create Binder</button>
+        <div class="button-container">
+            <img src="./media/import-csv.png" class="tab-button" id="import-csv-btn">
+            <img src="./media/create-list.png" class="tab-button" id="create-list-btn">
+            <img src="./media/start-trade.png" class="tab-button" id="start-trade-btn">
+        </div>
 
         <div class="title">powernine.dev</div>
         <p style="text-align: center; margin-top: -2rem; margin-bottom: 1rem; font-size: 1rem; color: gray;">the <strong>free</strong> mtg trading & market analysis tool</p>
