--- a/public/list.html
+++ b/public/list.html
@@ -11,10 +11,14 @@
 </head>
 <body>
     <div class="header">
-        <h1>Imported Collection</h1>
+        <h1>imported collection</h1>
         <div class="header-controls">
+            <div id="save-warning" class="warning-banner" style="display: none;">
+              this list is temporary and will be deleted automatically. click "save list" to keep it permanently.
+            </div>
+            <button id="save-list-btn" class="view-button">Save List</button>
             <a href="/" id="switch-view-btn" class="view-button">Switch to Binder</a>
-            <a href="/" class="back-button">← Import New List</a>
+            <a href="/" class="back-button">← import new list</a>
         </div>
     </div>
 
