Added transactions page

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
         <div class="button-container">
             <img src="./media/import-csv.png" class="tab-button" id="import-csv-btn">
             <img src="./media/create-list.png" class="tab-button" id="create-list-btn">
-            <img src="./media/start-trade.png" class="tab-button" id="start-trade-btn">
+            <img src="./media/start-trade.png" class="tab-button" id="force-card-update-btn">
             <a href="/inventory.html" class="tab-button">Manage Inventory</a>
+            <a href="/transactions.html" class="tab-button">Transaction History</a>
         </div>
 
         <div class="title">powernine.dev</div>
