Updating API to not use Scryfall

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <h1>Inventory Management</h1>
+        <button id="export-inventory-btn" class="action-btn">Export as TXT</button>
         <a href="/" class="back-button">← Back to Home</a>
     </div>
 
